# DODO

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  run_coupled_optimization.py  setup.py
.github/workflows/: ci.yml
data/domain_Bow_at_Banff_distributed/forcing/FUSE_input/: Bow_at_Banff_distributed_elev_bands.nc  Bow_at_Banff_distributed_input.nc
data/domain_Bow_at_Banff_distributed/observations/streamflow/preprocessed/: Bow_at_Banff_distributed_streamflow_processed.csv
data/domain_Bow_at_Banff_distributed/settings/FUSE/: fm_catch.txt  fuse_zConstraints_snow.txt
data/domain_Bow_at_Banff_distributed/settings/mizuRoute/: topology.nc
data/domain_Bow_at_Banff_distributed/shapefiles/catchment/: Bow_at_Banff_distributed_HRUs_GRUs.dbf  Bow_at_Banff_distributed_HRUs_GRUs.shp  Bow_at_Banff_distributed_HRUs_GRUs.shx
data/domain_Bow_at_Banff_distributed/shapefiles/river_network/: Bow_at_Banff_distributed_riverNetwork_delineate.dbf  Bow_at_Banff_distributed_riverNetwork_delineate.shp  Bow_at_Banff_distributed_riverNetwork_delineate.shx
python/dodo/: __init__.py  __main__.py  cli.py  run_coupled_optimization.py
