[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dodo-hydro"
version = "0.1.0"
description = "End-to-end differentiable calibration for coupled hydrologic and routing models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Darri Eythorsson", email = "darri.eythorsson@ucalgary.ca"}
]
keywords = ["hydrology", "optimization", "differentiable", "routing", "fuse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.20",
    "torch>=2.0",
    "pandas>=1.5",
    "xarray>=2022.0",
    "netCDF4>=1.5",
    "tqdm>=4.0",
    "matplotlib>=3.0",
    "cfuse>=0.4.1",
    "droute>=0.5.0",
]

[project.optional-dependencies]
plots = ["geopandas>=0.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/DarriEy/DODO"
Repository = "https://github.com/DarriEy/DODO"
Issues = "https://github.com/DarriEy/DODO/issues"

[project.scripts]
dodo-optimize = "dodo.cli:cli"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "python"}
license-files = ["LICENSE"]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]
